# screepsxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  loop.cpp
example/js/: main.js  wasm_loader.js
include/Screeps/: Constants.hpp  ConstructionSite.hpp  Context.hpp  Creep.hpp  Deposit.hpp  Effect.hpp  Flag.hpp  Game.hpp  JS.hpp  JSON.hpp  Macro.hpp  Memory.hpp  Object.hpp  OwnedStructure.hpp  PathFinder.hpp  RawMemory.hpp  Resource.hpp  Room.hpp  RoomObject.hpp  RoomPosition.hpp  Ruin.hpp  Source.hpp  Store.hpp  Structure.hpp  StructureContainer.hpp  StructureController.hpp  StructureExtension.hpp  StructureExtractor.hpp  StructureLink.hpp  StructureRampart.hpp  StructureRoad.hpp  StructureSpawn.hpp  StructureStorage.hpp  StructureTerminal.hpp  StructureTower.hpp  StructureWall.hpp
src/: ConstructionSite.cpp  Creep.cpp  Deposit.cpp  Flag.cpp  Game.cpp  JS.cpp  Memory.cpp  Object.cpp  OwnedStructure.cpp  PathFinder.cpp  RawMemory.cpp  Resource.cpp  Room.cpp  RoomObject.cpp  RoomPosition.cpp  Ruin.cpp  Source.cpp  Store.cpp  Structure.cpp  StructureContainer.cpp  StructureController.cpp  StructureExtension.cpp  StructureExtractor.cpp  StructureLink.cpp  StructureRampart.cpp  StructureRoad.cpp  StructureSpawn.cpp  StructureStorage.cpp  StructureTerminal.cpp  StructureTower.cpp  StructureWall.cpp
tools/: upload.py
